k8s/loans/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-loans-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-loans
  template:
    metadata:
      labels:
        app: user-loans
    spec:
      serviceAccountName: loans-service-account
      containers:
        - name: user-loans
          image: chaimaaaa/user-loans-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
