k8s/loans/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-loans-service
  namespace: default
spec:
  selector:
    app: user-loans
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
