k8s/loans/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-loans-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /loans
            pathType: Prefix
            backend:
              service:
                name: user-loans-service
                port:
                  number: 3000
